--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,8 +12,7 @@
             "env": {
                 "FLASK_APP": "./web-application/main.py",
                 "FLASK_ENV": "development",
-                "FLASK_DEBUG": "1",
-                "SQLALCHEMY_TRACK_MODIFICATIONS": true
+                "FLASK_DEBUG": "1" 
             },
             "args": [
                 "run",
