--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ autopep8==1.5.3
 click==7.1.2
 flake8==3.8.3
 Flask==1.1.2
+Flask-Login==0.5.0
 Flask-SQLAlchemy==2.4.3
 importlib-metadata==1.6.1
 itsdangerous==1.1.0
